--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "file-saver": "^2.0.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-paginate": "^6.2.1",
