--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "redux": "4.0.0",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
     "toastr": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --coverage",
     "eject": "react-scripts eject",
     "coverage": "react-scripts test --coverage --coverageReporters=text-lcov | coveralls"
   },
